syntax = "proto3";

package post.v1;

option go_package = "ghostnet/gen/proto/post/v1;postv1";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  rpc ListUserPosts(ListUserPostsRequest) returns (ListUserPostsResponse);
}

message CreatePostRequest {
  int64 author_user_id = 1;
  string text = 2;
  string media_type = 3; // "", "photo", "video"
  string telegram_file_id = 4;
  string telegram_unique_id = 5;
}

message CreatePostResponse {
  int64 post_id = 1;
}

message GetPostRequest {
  int64 post_id = 1;
}

message GetPostResponse {
  int64 post_id = 1;
  int64 author_user_id = 2;
  string text = 3;
  string media_type = 4;
  string telegram_file_id = 5;
  string telegram_unique_id = 6;
}

message ListUserPostsRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message PostItem {
  int64 post_id = 1;
  string text_preview = 2;
  int64 likes = 3;
  int64 dislikes = 4;
  int64 comments = 5;
  int64 views = 6;
}

message ListUserPostsResponse {
  repeated PostItem posts = 1;
  int32 page = 2;
  int32 page_size = 3;
  bool has_more = 4;
}

